[project]
name = "cartesapp"
version = "1.2.2"
authors = [
  { name="Lyno Ferraz", email="lyno@prototyp3.dev" },{ name="Felipe Fink Grael", email="felipefg@prototyp3.dev" },
]
description = "A Python Opinionated High Framework for Cartesi Distributed Applications"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-cartesi@git+https://github.com/prototyp3-dev/python-cartesi@896712ce056fd15daa7117b80fc6defe915edba8",
    "pony >= 0.7.19",
    "typer >= 0.15.4"
]

[project.optional-dependencies]
dev = [
    "Jinja2 >= 3.1.6",
    "pydantic-to-typescript >= 2.0.0",
    "watchdog >= 6.0.0",
    "pytest-order >= 1.3.0",
]
machine = [
    "python-cartesi[machine]@git+https://github.com/prototyp3-dev/python-cartesi@896712ce056fd15daa7117b80fc6defe915edba8",
]
cartesapplib = [
    "cartesapplib @ git+https://github.com/prototyp3-dev/cartesapplib@v0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/prototyp3-dev/cartesapp"

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
cartesapp = "cartesapp.cli:app"
run_cartesapp = "cartesapp.manager:run"

[tool.setuptools.package-data]
"*" = ["*.jinja"]
